--- a/working.html
+++ b/working.html
@@ -62,7 +62,7 @@ newElement.remove();
             </div>
 
             <div class="mt-6">
-                <a href="more.html" class="bg-blue-500 text-white px-4 py-2 rounded">🔙 Back to Dashboard</a>
+                <a href="index.html" class="bg-blue-500 text-white px-4 py-2 rounded">🔙 Back to Dashboard</a>
             </div>
         </div>
     </div>
